--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "firebase": "^9.21.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
+    "swiper": "^9.3.1",
     "tui-pagination": "^3.4.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "console-browserify": "^1.2.0",
     "buffer": "^6.0.3",
+    "console-browserify": "^1.2.0",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4",
